# MACalendar

./: .gitignore  Launch Calendar.command  README.md  SYSTEM.md  SYSTEM_IPHONE.md  config.example.yaml  pyproject.toml
DOCUMENTATION/: CODE_MAP.md
assistant/: app.py  app_icon.icns  config.py  db.py  exceptions.py  hotkey.py  main.py  pipeline.py
assistant/actions/: __init__.py  base.py
assistant/actions/calendar/: __init__.py  action.py  auth.py  event_builder.py  graph_client.py  handler.py  intent.py
assistant/actions/todo/: __init__.py  action.py  intent.py
assistant/api/: __init__.py  server.py
assistant/audio/: capture.py  probe.py
assistant/calendar_ui/: coursework_view.py  day_view.py  event_dialog.py  importer.py  month_view.py  sidebar.py  styles.py  timer_view.py  todo_view.py  week_view.py  window.py
assistant/confirmation/: handler.py
assistant/intent/: parser.py  rule_parser.py
assistant/stt/: base.py  google_stt.py  whisper_stt.py
assistant/tts/: speaker.py
scripts/: setup_auth.py  test_graph.py  test_ollama.py  test_pipeline.py  test_stt.py
tests/: conftest.py  test_ollama_parser.py  test_todo_parser.py
tests/integration/: test_ollama_intent.py
tests/unit/: test_action_registry.py  test_audio_capture.py  test_config.py  test_confirmation_handler.py  test_event_builder.py  test_intent_parser.py
