[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assistant-tools"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6",
    "pynput==1.7.7",
    "sounddevice==0.5.1",
    "numpy==1.26.4",
    "faster-whisper==1.1.0",
    "SpeechRecognition==3.11.0",
    "requests==2.32.3",
    "msal==1.31.0",
    "pydantic>=2.0",
    "pyyaml==6.0.2",
    "python-dateutil==2.9.0",
    "pytz==2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock",
    "pytest-cov",
]

[project.scripts]
assistant = "assistant.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
